# spo_lab2_itmo_spring_2021

./: CMakeLists.txt  Main.c  Main.h  Main.java  README.MD  available_devices.c  ntfs.c  ntfsutils.c  ntfsutils.h
